<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.view.fragments.SplashFragment"
    >

    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:lottie_autoPlay="true"
        app:lottie_rawRes="@raw/splash_background"
        app:lottie_loop="true"
        app:lottie_repeatMode="restart"
        android:scaleType="centerCrop"
        app:lottie_clipToCompositionBounds="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/label_1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/splash_label1"
        android:textAlignment="center"
        android:textSize="@dimen/text_large"
        android:textStyle="italic"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/label_2"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintVertical_bias="0.4"/>
    <TextView
        android:id="@+id/label_2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/splash_label2"
        android:textAlignment="center"
        android:textStyle="italic"
        android:textSize="@dimen/text_xxxlarge"
        android:textFontWeight="700"
        app:layout_constraintTop_toBottomOf="@id/label_1"
        app:layout_constraintBottom_toTopOf="@id/label_3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        android:id="@+id/label_3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/splash_label3"
        android:textAlignment="center"
        android:textStyle="italic"
        android:textSize="@dimen/text_xxlarge"
        app:layout_constraintTop_toBottomOf="@id/label_2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>