<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.view.fragments.StaffDetailFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appBarLayout">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

            <TextView
                android:id="@+id/nameTV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                tools:text="Roberto"
                android:textSize="@dimen/text_xxlarge"
                app:layout_constraintBottom_toTopOf="@id/lastnameTV"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/image_box"
                app:layout_constraintTop_toTopOf="@id/image_box" />

            <TextView
                android:id="@+id/lastnameTV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                tools:text="Fernandez"
                android:textSize="@dimen/text_xlarge"
                app:layout_constraintBottom_toBottomOf="@id/image_box"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/image_box"
                app:layout_constraintTop_toBottomOf="@id/nameTV" />


            <TextView
                android:id="@+id/proffesion_hint"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/profession"
                android:textSize="@dimen/text_medium"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="16dp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/image_box" />

            <TextView
                android:id="@+id/proffesionTV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:text="Developer"
                android:textSize="@dimen/text_large"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/proffesion_hint" />


            <TextView
                android:id="@+id/email_hint"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textSize="@dimen/text_medium"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="16dp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/proffesionTV" />

            <TextView
                android:id="@+id/emailTV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:text="email@email.com"
                android:textSize="@dimen/text_large"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/email_hint" />

            <TextView
                android:id="@+id/country_hint"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/country"
                android:textSize="@dimen/text_medium"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="16dp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/emailTV" />

            <TextView
                android:id="@+id/countryTV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:text="España"
                android:textSize="@dimen/text_large"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/country_hint" />

            <TextView
                android:id="@+id/gender_hint"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/gender"
                android:textSize="@dimen/text_medium"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="16dp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/countryTV" />

            <TextView
                android:id="@+id/genderTV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:text="Female"
                android:textSize="@dimen/text_large"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/gender_hint" />

            <TextView
                android:id="@+id/age_hint"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/age"
                android:textSize="@dimen/text_medium"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="16dp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/genderTV" />

            <TextView
                android:id="@+id/ageTV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:text="21"
                android:textSize="@dimen/text_large"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/age_hint" />


            <androidx.cardview.widget.CardView
                android:id="@+id/image_box"
                android:layout_width="150dp"
                android:layout_height="150dp"
                app:cardCornerRadius="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/profileIV"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:src="#FF0000" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/id_box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                app:cardBackgroundColor="@color/m3_ref_palette_neutral90"
                app:cardCornerRadius="20dp"
                app:layout_constraintTop_toTopOf="@id/image_box"
                app:layout_constraintEnd_toEndOf="@id/image_box">

                <TextView
                    android:id="@+id/idTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:textColor="@color/m3_ref_palette_neutral10"
                    android:textSize="@dimen/text_small"
                    tools:text="#12" />
            </androidx.cardview.widget.CardView>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize" />

    </com.google.android.material.appbar.AppBarLayout>

</androidx.constraintlayout.widget.ConstraintLayout>